<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewPostFragment">

    <TextView
        android:id="@+id/viewUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="User information" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accept" />

    <Button
        android:id="@+id/rejectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reject/Ignore" />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/viewPostRecyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

</LinearLayout>