<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home" />

    <TextView
        android:id="@+id/viewListings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Listings"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>




</LinearLayout>

